--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
+        "livewire/livewire": "^3.3",
         "spatie/laravel-medialibrary": "^10.15",
         "tightenco/ziggy": "^1.0"
     },
